--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -73,11 +73,11 @@ background-color: $green;
         font-size: 48px;
         line-height: 72px;
         margin-bottom: 10px;
-        font-weight: 700;
+        @include f700;
     }
     &-text{
         margin-bottom: 50px;
-        font-weight: 500;
+        @include f500;
         font-size: 20px;
         line-height: 30px;
     }
@@ -98,7 +98,7 @@ background-color: $green;
             padding-right: 60px;
             &::placeholder{
                 color:#90a4ae;
-                font-weight: 500;
+                @include f500;
 
             }
         }
@@ -167,7 +167,7 @@ background-color: $green;
         padding: 10px 30px;
         align-items: center;
         min-height: 90px;
-        font-weight: 500;
+        @include f500;
         border-bottom: 1px solid #e7ecf2;
     }
     &-name{
@@ -213,7 +213,7 @@ background-color: $green;
         }
         span{
             font-size: 14px;
-            font-weight: 500;
+            @include f500;
         }
 
         
@@ -284,16 +284,68 @@ background-color: $green;
     }
 }
 
-.Ellipse_6 {
-  border-radius: 50%;
-  background-color: rgb(232, 232, 232);
-  position: absolute;
-  left: 915px;
-  top: 2761px;
-  width: 22px;
-  height: 22px;
-  z-index: 168;
-}
-
 
 //end product-slider
+
+// start advantages
+.advantages{
+    background-color: $bg;
+    padding: 110px 0;
+}
+.advantages__title{
+    color: #fff;
+}
+.advantages__inner{
+    display: flex;
+    justify-content: space-between;
+}
+.advantages__item{
+    max-width: 370px;
+    text-align: center;
+    padding: 0 15px;
+    &:hover{
+    .advantages__item-images{
+        background-color: $green;
+        transition: all .3s;
+
+    }
+    .advantages__item-title{
+        color: $green;
+        transition: all .3s;
+
+    }
+    .advantages__item-images{
+        g{
+            fill: #fff;
+            transition: all .3s;
+
+        }
+    }
+    }
+    &-images{
+        width: 114px;
+        height: 114px;
+        background-color: #fff;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto 30px;
+    }
+    &-title{
+        margin-bottom: 25px;
+        font-size: 24px;
+        color: #fff;
+        @include f500;
+    }
+
+    &-text{
+        font-size: 15px;
+        color: $text;
+    }
+}
+
+.icosvg-1{
+    
+}
+// end advantages
