--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -4,6 +4,7 @@ $green: #8bc34a;
 $bg: #263238;
 $grey: #f4f6f5;
 $text: #a4bcc4;
+$foot: #919699;
 
 @mixin f500 {
     font-family: Roboto, sans-serif;
