--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -420,3 +420,164 @@ background-color: #fff;
     }
 }
 // end tutorial
+// start footer
+
+.footer{
+    background-color: $bg;
+    &__inner{
+        display: flex;
+        justify-content: space-between;
+        padding: 100px 0px 80px;
+    }
+}
+.footer__copy{
+    border-top: 1px solid #424d53;
+}
+.footer__copy-text{
+    text-align: center;
+    font-size: 15px;
+    color: $foot;
+    padding: 25px 0px 25px;
+
+}
+.footer__col{
+    max-width: 270px;
+    width: 100%;
+    &-menu{
+        max-width: 270px;
+    }
+    &-title{
+        font-size: 22px;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 700;
+        color: #fff;
+        padding-bottom: 30px;
+        margin-bottom: 30px;
+        position: relative;
+        &::after{
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 2px;
+            width: 51px;
+            height: 3px;
+            background-color: $green;
+
+        }
+       
+    }
+    &-text{
+        color: #b7c3c8; 
+    }
+}
+.footer__info{
+    @include f500;
+    color: #fff;
+    margin-top: 18px;
+    padding-left: 30px;
+    position: relative;
+    &::before{
+        content:'\f041';
+        font-family: 'icomoon';
+        color: $green;
+        font-size: 18px;
+        position: absolute;
+        left: 0;
+    }
+}
+.footer__info-phone{
+    &::before{
+        content:'\f095';
+        font-family: 'icomoon';
+        
+    }
+}
+.footer__col-list{
+    a{
+        margin-bottom: 13px;
+        color: $foot;
+        padding-left: 22px;
+        position: relative;
+        &::before{
+            content: '\f054';
+            font-family: 'icomoon';
+            color: $green;
+            position: absolute;
+            left: 0;
+            font-style: 18px;
+        }
+    }
+}
+.footer__social-link{
+    margin-bottom: 33px;
+    li{
+        display: inline-block;
+    }
+    a{
+        width: 28px;
+        height: 28px;
+        background-image: url(../images/icons/css_sprites.png);
+        & + a{
+            margin-left: 7px;
+           
+        }
+    }
+}
+      
+        .link-twitter{
+            background-position: -28px 0;
+        }
+        .link-youtube{
+            background-position: -0 -28px;
+        }
+        .link-printrest{
+            background-position: -28px -28px;
+        }
+        .link-linkedin{
+            background-position: -56px -0;
+        }
+        .footer__form-title{
+            font-size: 20px;
+            color: #fff;
+            margin-bottom: 15px;
+        }
+        .footer__form{
+            position: relative;
+            input{
+                border: none;
+                background-color: #2f3c43;
+                display: block;
+                width: 100%;
+                height: 40px;
+                font-size: 14px;
+                color: #697378;
+                padding-left: 13px;
+                padding-right: 50px;
+                &::placeholder{
+                    color: #fff;
+                }
+
+            }
+            button{
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                background-color: $green;
+                border: none;
+                width: 43px;
+                height: 40px;
+                cursor: pointer;
+                &::before{
+                    content: '\f124';
+                    position: absolute;
+                    font-family: 'icomoon';
+                    color: #fff;
+                    font-size: 20px;
+                    top: 11px;
+                    left: 13px;
+                }
+
+
+            }
+        }
+// end footer
