--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -35,6 +35,9 @@
   
  
 
+
+ 
+
 .icon-search:before {
   content: "\f002";
 }
@@ -140,8 +143,20 @@
 .icon-flash:before {
   content: "\f0e7";
 }
+.icon-angle-left:before {
+  content: "\f104";
+}
+.icon-angle-right:before {
+  content: "\f105";
+}
 .icon-angle-down:before {
   content: "\f107";
+}
+.icon-mail-reply:before {
+  content: "\f112";
+}
+.icon-reply:before {
+  content: "\f112";
 }
 .icon-location-arrow:before {
   content: "\f124";
