--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,6 +3,9 @@
 @import 'fonts';
 
 // start header
+.header{
+    background-color: #fff;
+}
 
 .header__top-inner {
     display: flex;
@@ -29,7 +32,8 @@
 background-color: $green;
 }
 
-.header__btn-register{
+.header__btn-register,
+.header__btn-logout{
     background-color: $red;
     margin-left: 7px;
 }
@@ -53,7 +57,268 @@ background-color: $green;
         color: #fff;
     }
 }
+.header__circle{
+    &.active{
+        display: block;
+    }
+    display: none;
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    background-color: #f5f5f5;
+    position: relative;
+    &::before{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: #a0a0a0;
+        font-size: 14px;
+    }
+    
+    span{
+        position: absolute;
+        width: 18px;
+        height: 18px;
+        background-repeat: 50%;
+        text-align: center;
+        line-height: 18px;
+        right: -7px;
+        top: -7px;
+        font-size: 11px;
+        color: #ffffff;
+        border-radius: 50%;
 
+    }
+
+}
+.header__box{
+    display: flex;
+    align-items: center;
+}
+.notification{
+    span{
+        background-color: #fcb322;
+    }
+}
+.message{
+    span{
+    background-color: #ef6c00;
+    }
+}
+.basket{
+    margin-right: 20px;
+    span{
+
+    background-color: $green;
+    }
+}
+.header__btn-login--off{
+    display: none;
+}
+.header__btn-logout{
+    display: none;
+    &.header__btn-login--on{
+        display: block;
+    }
+}
+.user{
+   
+    margin-right: 25px;
+    padding-right: 20px;
+    
+    &::before{
+        content: "\f107";
+        font-family: 'icomoon';
+        position: absolute;
+        font-size: 16px;
+        color: #707070;
+        right: 25px;
+        top: 0px;
+    }
+    &__inner{
+        display: flex;
+        align-items: center;
+    }
+    &__images{
+        margin-right: 15px;
+        width: 34px;
+        height: 34px;
+        overflow: hidden;
+        border-radius: 50%;
+    }
+    &__info{
+        font-size: 14px;
+        line-height: 24px;
+    }
+    &__name{
+       
+        @include f500;
+        color: #222222;
+        
+    }
+    &__money{
+        color: $green;
+        @include f700;
+
+    }
+}
+.user__menu{
+    border: 0px solid rgb(204, 204, 204);
+    top: 69px;
+    left: 20px;
+    position: absolute;
+    background-color: #fff;
+    padding: 0 20px;
+    width: 158px;
+    transition: all .3s;
+    height: 0px;
+    overflow: hidden;
+    a{
+        font-size: 12px;
+      margin-bottom: 15px;
+        color: #546e7a;
+    }
+}
+.circle__menu{
+    position: absolute;
+    top: 69px;
+    z-index: 1;
+}
+.user__box,
+.basket__box,
+.notification__box,
+.message__box {
+    position: relative;
+    height: 90px;
+    margin-top: 40px;
+    &:hover{
+        .user__menu
+        {
+            height: auto;
+            padding: 20px;
+            border-width: 1px;
+            overflow: auto;
+        }
+    }
+}
+.basket__box,
+.notification__box,
+.message__box{
+    margin-top: 54px;
+    margin-left: 15px;
+    &:hover{
+        .header__circle::before{
+            color: $bg;
+        }
+        .circle__menu{
+            height: auto;
+            overflow: hidden;
+        }
+        .circle__item{
+            padding: 23px 23px;
+            border-width: 1px;
+        }
+    }
+}
+.circle__menu{
+    border-top: 1px solid #e0e0e0;
+    top: 62px;
+    right: 0;
+    height: 0;
+    overflow: hidden;
+    transition: all .3s;
+}
+
+.circle__item{
+    background-color: #fff;
+    border: 0px solid #e0e0e0;
+    border-top: none;
+    padding: 0 23px;
+    transition: all .3s;
+    display: flex;
+    align-items: center;
+    width: 269px;
+    position: relative;
+    &::before{
+        position: absolute;
+        top: 27px;
+        right: 28px;
+        color: #b0bec5;
+        font-size: 16px;
+    }
+}
+.circle__images{
+    margin-right: 15px;
+
+}
+.circle__info-name{
+@include f500;
+color: $bg;
+}
+.circle__info-theme{
+font-size: 12px;
+color: $green;
+}
+.circle__info-price{
+@include f500;
+font-size: 16px;
+color: #000;
+}
+.circle__info-date{
+    color: #90a4ae;
+    font-size: 10px;
+}
+.basket__summ{
+    padding: 16px 17px 12px;
+    border: 1px solid #e0e0e0;
+    border-top: none;
+    background-color: #fff;
+}
+.basket__title{
+    display: flex;
+    justify-content: space-between;
+    padding-left: 13px;
+    padding-right: 22px;
+    font-size: 16px;
+    margin-bottom: 15px;
+    @include f700;
+    color: #263238;
+}
+.basket__btn{
+    @include f700;
+    color: #fff;
+    font-size: 14px;
+    padding: 12px 5px;
+    background-color: $green;
+    text-align: center;
+    width: 105px;
+}
+.basket__btn-checkout{
+    width: 117px;
+    margin-left: 6px;
+    background-color: $red;
+
+}
+.notification__menu,
+.message__menu{
+    .circle__images{
+        margin-right: 20px;
+        width: 48px;
+        height: 48px;
+        border-radius: 50%;
+    }
+    .circle__info{
+        line-height: 18px;
+    }
+}
+.icons-color::before{
+    color: #ef6c00;
+}
+.header__btn-menu,
+.menu__btn{
+    display: none;
+}
 // end header
 
 // start search
@@ -949,3 +1214,5 @@ display: none;
 }
 
 // end product-page
+
+@import 'media';
