--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1942,5 +1942,201 @@ padding-bottom: 25px;
         }
     }
     // end settings
+    //start profile
+    .profile__inner{
+        display: flex;
+        margin-bottom: 30px;
+    }
+    .profile__aside{
+        margin-right: 30px;
+        max-width: 270px;
+        width: 100%;
+        .footer__social-link{
+            margin-bottom: 30px;
+        }
+    }
+    .profile__content{
+        width: 100%;
+    }
+    .profile-status{
+    font-size: 13px;
+    color: #707070;
+    border: 1px solid #cdcdcd;
+    padding: 6px 9px 5px 30px;
+    position: relative;
+    &::before{
+        position: absolute;
+        content: '';
+        left: 11px;
+        height: 9px;
+        width: 9px;
+        border-radius: 50%;
+        top: 13px;
+    }
+    }
+    .profile-on{
+        &::before{
+            background-color: $green;
+        }
+    }
+    .profile-off{
+        &::before{
+            background-color: $red;
+        }
+    }
+    .profile__aside-btn{
+        margin-bottom: 13px;
+        text-align: center;
+    }
+    .profile__aside-message{
+        margin-bottom: 17px;
+        display: block;
+        width: 100%;
+        font-size: 16px;
+        color: #fff;
+        @include f500;
+        padding: 18px 10px;
+        position: relative;
+        background-color: $text;
+        box-shadow: 0.5px 0.866px 2px 0px rgba(69, 90, 100, 0.75);
+        &::before{
+            content:'\f003';
+            font-family: icomoon;
+            position: absolute;
+            left: 50px;
+            top: 17px; 
+        }
+
+    }
+   
+    .profile__aside-following{
+        margin-bottom: 17px;
+        display: block;
+        width: 100%;
+        font-size: 16px;
+        color: #fff;
+        @include f700;
+        background-color: $green;
+        padding: 18px 10px;
+        position: relative;
+        box-shadow: 0.5px 0.866px 2px 0px rgba(69, 90, 100, 0.75);
+    }
+    .profile__banner{
+        padding: 20px;
+        border: 1px solid #dedede;
+        background-color: #fff;
+        margin-bottom: 35px;
+    }
+    .profile__banner-images{
+        background-image: url(../images/content/banner.jpg);
+        min-height: 332px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+        
+    }
+.profile__items{
+display: flex;
+border: 1px solid #dedede;
+
+}
+.profile__item{
+    background-color: #fff;
+    width: 25%;
+    text-align: center;
+    padding: 20px 5px 17px;    
+    &+.profile__item{
+        border-left: 1px solid #dedede;
+
+    }
+}
+.profile__item{
+font-size: 14px;
+@include f500;
+color: $bg;
+}
+.profile__item-content{
+font-size: 14px;
+color: #707070;
+&.profile__item-sales{
+    @include f500;
+    color: $bg;  
+}
+}
+.profile-settings{
+    .product-one__tabs.settings__tabs{
+        .tabs span{
+            font-family: 'Roboto', sans-serif !important;
+            font-weight: 500;
+            color: #707070;
+            position: relative;
+            &.active::before{
+            color: $green;
+            }
+            &::before{
+                
+                font-family: 'icomoon';
+                position: absolute;
+                left: 27px;
+                top: 16px;
+                color: #d0d0d0;
+                font-size: 14px;
+            }
+        } 
+    }
+}
+.personal__box{
+    background-color: #fff;
+    padding: 35px 40px 25px;
+    border: 1px solid #dedede;
+
+}
+.personal__box-title{
+    @include f700;
+    margin-bottom: 25px;
+    color: $bg;
+    font-size: 20px;
+}
+.personal__box-text{
+    margin-bottom: 20px;
+    p{
+        color: #707070;
+    }
+}
+.personal__box-head{
+    display: flex;
+    justify-content: space-between;
+}
+.personal__box-item-name{
+margin-bottom: 16px;
+color: $bg;
+font-style: italic;
+@include f500;
+font-size: 16px;
+}
+.personal__box-item-number{
+@include f700;
+margin-bottom: 16px;
+color: $bg;
+font-size: 16px;
+
+}
+.personal__box-item-line{
+    height: 15px;
+    background-color: #f4f4f4;
+    border-radius: 3px;
+    margin-bottom: 23px;
+    span{
+        display: block;
+        border-radius: 3px;
+        background-color: $green;
+        height: 15px;
+        background-image: url(../images/pro-bar.jpg);
+        background-repeat: repeat;
+    }
+}
+
+
+    //end profile
 
 @import 'media';
