--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -8,7 +8,9 @@ html{
 }
 html,
 body {
-	height: 100%;
+    height: 100%;
+    position: relative;
+    overflow-x: hidden;
 }
 
 a{
@@ -28,7 +30,8 @@ body{
     font-weight: 400;
     line-height: 24px;
     color: $text;
-    overflow-x: hidden;
+    background-color: $grey;
+
 }
 
 
@@ -48,6 +51,7 @@ body{
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
+
 }
 .container-fluid{
     max-width: 100%;
@@ -79,6 +83,8 @@ body{
 .breadcrumbs{
     &__inner{
         padding: 40px 0 45px;
+        overflow: hidden;
+        width: 1200px;
     }
     &__list{
         li{
@@ -117,4 +123,7 @@ body{
         color: $green;
         font-size: 14px;
     }
+}
+#modal{
+    display: none;
 }
